inquiry form checkboxes fix

--- a/inquiry.html
+++ b/inquiry.html
@@ -166,19 +166,19 @@
     <div class="radio-group project-scope-group">
       <label class="radio-option">
         <input type="checkbox" name="projectScope[]" value="Website Design & Development">
-        Website Design & Development
+        <span>Website Design & Development</span>
       </label>
       <label class="radio-option">
         <input type="checkbox" name="projectScope[]" value="SEO/GEO & Website Growth">
-        SEO/GEO & Website Growth
+        <span>SEO/GEO & Website Growth</span>
       </label>
       <label class="radio-option">
         <input type="checkbox" name="projectScope[]" value="Branding & Visual Identity">
-        Branding & Visual Identity
+        <span>Branding & Visual Identity</span>
       </label>
       <label class="radio-option">
         <input type="checkbox" name="projectScope[]" value="Business IT & Digital Infrastructure">
-        Business IT & Digital Infrastructure
+        <span>Business IT & Digital Infrastructure</span>
       </label>
     </div>
 
@@ -186,23 +186,23 @@
     <div class="radio-group">
       <label class="radio-option">
         <input type="checkbox" name="additional[]" value="Advanced Animation & Interactive Experiences">
-        Advanced Animation & Interactive Experiences
+        <span>Advanced Animation & Interactive Experiences</span>
       </label>
       <label class="radio-option">
         <input type="checkbox" name="additional[]" value="Custom Web Apps & Portals">
-        Custom Web Apps & Portals
+        <span>Custom Web Apps & Portals</span>
       </label>
       <label class="radio-option">
         <input type="checkbox" name="additional[]" value="E-Commerce">
-        E-Commerce
+        <span>E-Commerce</span>
       </label>
        <label class="radio-option">
         <input type="checkbox" name="additional[]" value="Ongoing Website Care & Hosting">
-        Ongoing Website Care & Hosting
+        <span>Ongoing Website Care & Hosting</span>
       </label>
        <label class="radio-option">
         <input type="checkbox" name="additional[]" value="Marketing & Ads Support">
-        Marketing & Ads Support
+        <span>Marketing & Ads Support</span>
       </label>
     </div>
 
