--- a/work.html
+++ b/work.html
@@ -106,24 +106,70 @@
 
 
 <div class="first-section">
-    <h1 class="text1">Design is&nbsp;</h1>
-    <h1 class="text2">our Lifeblood</h1>
+    <h1 class="text0">Selected Work</h1>
+    <h2 class="text1">Design is our Lifeblood</h2>
 </div>
 
 
 <!--SCROLL SECTION-->
 <div class="scroll-section">
-  <div class="spacer"></div> <!-- Added spacer before -->
+ 
   
   <div class="logo-container">
-    <img src="images/logobox1.png" alt="">
-    <img src="images/logobox2.png" alt="">
-    <img src="images/logobox3.png" alt="">
-    <img src="images/logobox4.png" alt="">
-    <img src="images/logobox5.png" alt="">
-    <img src="images/logobox6.png" alt="">
-    <img src="images/logobox7.png" alt="">
-    <img src="images/logobox8.png" alt="">
+    <img src="images/logo/1.png" />
+    <img src="images/logo/2.png" />
+    <img src="images/logo/3.png" />
+    <img src="images/logo/4.png" />
+    <img src="images/logo/5.png" />
+  </div>
+  <div class="logo-container">
+    <img src="images/logo/6.png" />
+    <img src="images/logo/7.png" />
+    <img src="images/logo/8.png" />
+    <img src="images/logo/9.png" />
+    <img src="images/logo/10.png" />
+  </div>
+  <div class="logo-container">
+    <img src="images/logo/11.png" />
+    <img src="images/logo/12.png" />
+    <img src="images/logo/13.png" />
+    <img src="images/logo/14.png" />
+    <img src="images/logo/15.png" />
+  </div>
+  <div class="logo-container">
+    <img src="images/logo/16.png" />
+    <img src="images/logo/17.png" />
+    <img src="images/logo/18.png" />
+    <img src="images/logo/19.png" />
+    <img src="images/logo/20.png" />
+  </div>
+  <div class="logo-container">
+    <img src="images/logo/21.png" />
+    <img src="images/logo/22.png" />
+    <img src="images/logo/23.png" />
+    <img src="images/logo/24.png" />
+    <img src="images/logo/25.png" />
+  </div>
+  <div class="logo-container">
+    <img src="images/logo/26.png" />
+    <img src="images/logo/27.png" />
+    <img src="images/logo/28.png" />
+    <img src="images/logo/29.png" />
+    <img src="images/logo/30.png" />
+  </div>
+  <div class="logo-container">
+    <img src="images/logo/31.png" />
+    <img src="images/logo/32.png" />
+    <img src="images/logo/33.png" />
+    <img src="images/logo/34.png" />
+    <img src="images/logo/35.png" />
+  </div>
+  <div class="logo-container">
+    <img src="images/logo/36.png" />
+    <img src="images/logo/37.png" />
+    <img src="images/logo/38.png" />
+    <img src="images/logo/39.png" />
+    <img src="images/logo/40.png" />
   </div>
 </div>
 <!--
@@ -219,31 +265,40 @@ body {
   background: #fff;
 }
 
+/* needed so each letter can move independently */
+.char {
+  display: inline-block;
+  will-change: transform, opacity, filter;
+}
+
+/* keep spacing exactly like before */
+.first-section h2 {
+  white-space: pre; /* preserves spaces */
+}
+
 .scroll-section {
-  min-height: 300vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  padding-top: 0;
-  padding-bottom: 0;
+  gap: 6rem;
+  padding: 10vh 2rem;
 }
 
 .logo-container {
-  display: flex;
-  flex-direction: column;
-  gap: 80px;
-  will-change: transform;
-  transform-style: preserve-3d;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr); /* ✅ 5 in a row */
+  align-items: center;
+  gap: 3rem;
+  max-width: 1400px;
+  margin: 0 auto;
 }
 
 .logo-container img {
-  width: 1700px;
-  max-width: 100%;
+  width: 100%;
+  max-width: 220px;
+  margin: 0 auto;
   height: auto;
-  opacity: 0.3; /* starting opacity */
-  transform: scale(0.85); /* starting scale */
-  will-change: opacity, transform;
+  object-fit: contain;
+  will-change: transform, opacity, filter;
 }
 
 
@@ -417,8 +472,9 @@ body {
 }
 .first-section {
   height: 100vh;
+  width: 100%;
   display: flex;
-  
+  flex-direction: column;   /* ✅ THIS is the missing piece */
   justify-content: center;
   align-items: center;
   text-align: center;
@@ -433,41 +489,42 @@ body {
   z-index: 9999;
   color: #727376
 }
-
+.first-section h1{
+  font-size: clamp(1rem, 2vw, 2rem); 
+  margin: 1rem 0;
+  will-change: transform;
+  z-index: 9999;
+  color: #727376
+}
 @media screen and (max-width: 768px) {
 .logo-container {
-  display: flex;
-  flex-direction: column;
-  gap: 40px;
-  will-change: transform;
-  transform-style: preserve-3d;
-  align-items: center;
-}
-.logo2 {
-    transform: scale(0.2); /* Shrinks image to 80% size */
-    width:20px;
-    height:auto;
+    grid-template-columns: repeat(6, 1fr); /* virtual grid */
+    row-gap: 2rem;
+    column-gap: 1.5rem;
   }
 
-.logo-container img {
-  width: 1700px;
-  max-width: 95%;
-  height: auto;
-  opacity: 0.3; /* starting opacity */
-  transform: scale(0.85); /* starting scale */
-  will-change: opacity, transform;
-}
+  /* Top row (3 logos) */
+  .logo-container img:nth-child(1) {
+    grid-column: 1 / 3;
+  }
+  .logo-container img:nth-child(2) {
+    grid-column: 3 / 5;
+  }
+  .logo-container img:nth-child(3) {
+    grid-column: 5 / 7;
+  }
 
-.scroll-section {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  padding-top: 0;
-  padding-bottom: 0;
-}
+  /* Bottom row (2 logos, centered) */
+  .logo-container img:nth-child(4) {
+    grid-column: 2 / 4;
+  }
+  .logo-container img:nth-child(5) {
+    grid-column: 4 / 6;
+  }
 
+  .logo-container img {
+    max-width: 140px;
+  }
 
 .card1 {
   min-height: auto;
@@ -545,39 +602,71 @@ body {
 
 <script>
   //SCROLL SECTION FOR LOGOS
-gsap.registerPlugin(ScrollTrigger);
+  // LOGO ROW SCROLL (same behavior as client rows)
+  gsap.registerPlugin(ScrollTrigger);
 
-const images = gsap.utils.toArray(".logo-container img");
+  function initLogoRowAnimations() {
+    document.querySelectorAll(".logo-container").forEach((row) => {
+      // initial state
+      gsap.set(row, {
+        opacity: 0.2,
+        scale: 0.7,
+        filter: "blur(10px)"
+      });
 
-images.forEach((img) => {
-  gsap.fromTo(
-    img,
-    {
-      y: 100,
-      scale: 0.85,
-      opacity: 0.3,
-      filter: "blur(4px)",
-    },
-    {
-      y: 0,
-      scale: 1,
-      opacity: 1,
-      filter: "blur(0px)",
-      ease: "power3.out",
-      scrollTrigger: {
-        trigger: img,
-        start: "center 80%",
-        end: "center 20%",
+      ScrollTrigger.create({
+        trigger: row,
+        start: "top 90%",
+        end: "bottom 10%",
         scrub: true,
-        onEnter: () => img.style.zIndex = 10,
-        onLeave: () => img.style.zIndex = 1,
-        onEnterBack: () => img.style.zIndex = 10,
-        onLeaveBack: () => img.style.zIndex = 1
-      }
-    }
-  );
-});
+        onUpdate: (self) => {
+          const progress = self.progress;
+          const centeredness = 1 - Math.abs(progress - 0.5) * 2;
 
+          const scale = 0.7 + centeredness * 0.3;
+          const opacity = 0.2 + centeredness * 0.8;
+          const blur = 8 - centeredness * 10;
+
+          gsap.to(row, {
+            scale,
+            opacity,
+            filter: `blur(${blur}px)`,
+            duration: 0.1,
+            overwrite: true
+          });
+        }
+      });
+    });
+
+    ScrollTrigger.refresh();
+  }
+
+  window.addEventListener("load", () => {
+    // only wait for logos inside scroll-section
+    const images = document.querySelectorAll(".scroll-section img");
+    let loaded = 0;
+
+    const checkLoaded = () => {
+      loaded++;
+      if (loaded === images.length) {
+        initLogoRowAnimations();
+        clearTimeout(fallbackTimer);
+      }
+    };
+
+    images.forEach((img) => {
+      if (img.complete) {
+        checkLoaded();
+      } else {
+        img.addEventListener("load", checkLoaded);
+        img.addEventListener("error", checkLoaded);
+      }
+    });
+
+    const fallbackTimer = setTimeout(() => {
+      initLogoRowAnimations();
+    }, 2000);
+  });
 
 //SCROLL SECTION AFTER LOGOS
 gsap.registerPlugin(ScrollTrigger);
@@ -608,47 +697,82 @@ gsap.fromTo(".card",
 
 
 
-
-//TEXT ANIMATION ON SCROLL
+//DESIGN IS OUR LIFEBLOOD EFFECT
 gsap.registerPlugin(ScrollTrigger);
 
-gsap.from([".text1", ".text2"], {
-  y: 100,              // slide up from below
+// --- helper: wrap every character ---
+function splitToChars(el) {
+  const text = el.textContent;
+  el.textContent = "";
+
+  const frag = document.createDocumentFragment();
+
+  for (const ch of text) {
+    const span = document.createElement("span");
+    span.className = "char";
+    span.textContent = ch === " " ? "\u00A0" : ch;
+    frag.appendChild(span);
+  }
+
+  el.appendChild(frag);
+  return Array.from(el.querySelectorAll(".char"));
+}
+
+const text = document.querySelector(".text1");
+const chars = splitToChars(text);
+
+// --- find index where "our" starts ---
+const rawText = "Design is our Lifeblood";
+const splitIndex = rawText.indexOf("our");
+
+const charsA = chars.slice(0, splitIndex);
+const charsB = chars.slice(splitIndex);
+//SELECTED WORK FADE ONLY
+gsap.from(".text0", {
+  y: 60,
+  opacity: 0,
+  duration: 0.9,
+  ease: "power3.out",
+  delay: 0.5
+});
+
+// ✅ fade in on load (whole line)
+gsap.from(text, {
+  y: 100,
   opacity: 0,
   duration: 1,
   ease: "power3.out",
-  delay: 0.8,
+  delay: 0.8
 });
 
-gsap.fromTo(".text1",
-  { x: 0 },
-  {
-    x: -600,
-    ease: "power3.out",
+// --- dissolve function ---
+function dissolve(chars, direction = 1) {
+  return gsap.to(chars, {
+    y: (i) => -(60 + (chars.length - i) * 1.2),
+    x: (i) => direction * (i * 0.6),
     opacity: 0,
-    scrollTrigger: {
-      trigger: ".scroll-section", // ✅ TRIGGER IS BELOW .first-section
-      start: "top bottom",        // ✅ when top of .scroll-section hits bottom of viewport
-      end: "top center",          // ✅ animate until it's at center
-      scrub: true,
+    filter: "blur(10px)",
+    ease: "none",
+    stagger: {
+      each: 0.015,
+      from: "start"
     }
-  }
-);
+  });
+}
 
-gsap.fromTo(".text2",
-  { x: 0 },
-  {
-    x: 600,
-    ease: "power3.out",
-    opacity: 0,
-    scrollTrigger: {
-      trigger: ".scroll-section",
-      start: "top bottom",
-      end: "top center",
-      scrub: true,
-    }
+// ✅ timeline so both restart cleanly
+const tl = gsap.timeline({
+  scrollTrigger: {
+    trigger: ".scroll-section",
+    start: "top bottom",
+    end: "top center",
+    scrub: true
   }
-);
+});
+
+tl
+  .add(dissolve(charsA, -1), 0)
+  .add(dissolve(charsB,  1), 0);
 </script>
 
  <script>
