work mobile logo fix

--- a/work.html
+++ b/work.html
@@ -37,7 +37,7 @@
  <nav class="navbar">
     <div class="navbar__container">
       <div class="navbar__left">
-        <a href="/" id="navbar__logo" class="logo2">
+        <a href="/" id="navbar__logo" class="logo">
           <img class="logo1" src="images/logo3.png" alt="Logo" />
         </a>
       </div>
