video optimization effort 1

--- a/services.html
+++ b/services.html
@@ -1078,8 +1078,11 @@
   margin:0;
   font-size: 2rem;
   font-weight: 400;
-    color: #54f3a4;
+  color: #54f3a4;
   transition: color 0.3s ease;
+}
+.acc-head h3:hover{
+  color: white;
 }
 .acc-plus::before,
 .acc-plus::after {
