--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     
    <div class="dropdown-video-bg">
     <video autoplay muted loop playsinline>
-      <source src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/public/videos/donut9.mp4" type="video/mp4" />
+      <source src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/public/videos/donut%20short%20x.mp4" type="video/mp4" />
     </video>
   </div>
 
@@ -130,7 +130,7 @@
   <div class="main">
     <div class="ball" id="draggableBall">
       <video class="ball-video" autoplay muted loop playsinline>
-        <source src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/public/videos/donut9.mp4" type="video/mp4" />
+        <source src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/public/videos/donut%20short%20x.mp4" type="video/mp4" />
         Your browser does not support the video tag.
       </video>
     </div>
@@ -279,12 +279,12 @@
       <!-- 💡 Repeating image-card structure -->
       <div class="image-card">
         <video class="ot-video" autoplay muted loop playsinline>
-          <source src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/public/videos//shandys.mov" type="video/mp4" />
+          <source src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/public/videos/Card%20Videos/shandys_web2%20(1).mp4" type="video/mp4" />
           Your browser does not support the video tag.
         </video>
 
         <video class="video-mobile" autoplay muted loop playsinline>
-          <source src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/public/videos//shandysmr.mov" type="video/mp4" />
+          <source src="" type="video/mp4" />
           Your browser does not support the video tag.
         </video>
         <div class="card-label">Shandy's Heights</div>
@@ -297,12 +297,12 @@
 
       <div class="image-card">
         <video class="ot-video" autoplay muted loop playsinline>
-          <source src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/public/videos//otvideo.mov" type="video/mp4" />
+          <source src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/public/videos/Card%20Videos/ot_web_1.mp4" type="video/mp4" />
           Your browser does not support the video tag.
         </video>
 
         <video class="video-mobile" autoplay muted loop playsinline>
-          <source src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/public/videos//ot_moblie.mov" type="video/mp4" />
+          <source src="" type="video/mp4" />
           Your browser does not support the video tag.
         </video>
         <div class="card-label">Oleumfield</div>
@@ -315,11 +315,11 @@
 
       <div class="image-card">
         <video class="ot-video" autoplay muted loop playsinline>
-          <source src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/public/videos/magnaflow.mov" type="video/mp4" type="video/mp4" />
+          <source src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/public/videos/Card%20Videos/magnaflow_web.mp4" type="video/mp4" type="video/mp4" />
           Your browser does not support the video tag.
         </video>
         <video class="video-mobile" autoplay muted loop playsinline>
-          <source src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/public/videos//magnaflow_mobile.mov" type="video/mp4" />
+          <source src="" type="video/mp4" />
           Your browser does not support the video tag.
         </video>
         <div class="card-label">Magna-Flow</div>
@@ -332,12 +332,12 @@
 
       <div class="image-card">
         <video class="ot-video" autoplay muted loop playsinline>
-          <source src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/public/videos//unico.mov" type="video/mp4" />
+          <source src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/public/videos/Card%20Videos/unico_web.mp4" type="video/mp4" />
           Your browser does not support the video tag.
         </video>
 
         <video class="video-mobile" autoplay muted loop playsinline>
-          <source src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/public/videos//unico.mov" type="video/mp4" />
+          <source src="" type="video/mp4" />
           Your browser does not support the video tag.
         </video>
         <div class="card-label">Unico Communications</div>
@@ -350,12 +350,12 @@
 
       <div class="image-card">
         <video class="ot-video" autoplay muted loop playsinline>
-          <source src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/public/videos//royalty.mov" type="video/mp4" />
+          <source src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/public/videos/Card%20Videos/royalty_web.mp4" type="video/mp4" />
           Your browser does not support the video tag.
         </video>
 
          <video class="video-mobile" autoplay muted loop playsinline>
-          <source src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/public/videos//royalty_mobile.mov" type="video/mp4" />
+          <source src="" type="video/mp4" />
           Your browser does not support the video tag.
         </video>
         <div class="card-label">Royalty Insurance</div>
@@ -393,6 +393,23 @@
 <section class="spacer spacer-bottom"></section>
 
 <style>
+  /* BALL CAUSING SCROLLBAR ON MOBILE*/
+ body {
+  width: 100%;
+  overflow-x: clip;   /* better than hidden when supported */
+}
+
+html {
+  overflow-x: clip;
+}
+
+[data-scroll-container],
+.main,
+#smooth-wrapper,
+#smooth-content {
+  overflow-x: clip;
+  width: 100%;
+}  /* BALL CAUSING SCROLLBAR ON MOBILE*/
 .scroll-text-section {
   height: 40vh;
   display: flex;
