video optimization effort 2

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
       <!-- 💡 Repeating image-card structure -->
       <div class="image-card">
         <video class="ot-video" autoplay muted loop playsinline>
-          <source src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/public/videos/Card%20Videos/shandys_web2%20(1).mp4" type="video/mp4" />
+          <source src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/public/videos/Card%20Videos/shandys_web.mp4" type="video/mp4" />
           Your browser does not support the video tag.
         </video>
 
