--- a/services.html
+++ b/services.html
@@ -349,12 +349,21 @@
 
     <div class="dropdown-content">
       <button class="close-menu" id="closeMenu">×</button>
-      <ul class="dropdown-links">
-        <li><a href="/index.html">Home</a></li>
-        <li><a href="/services.html">Services</a></li>
-        <li><a href="/work.html">Work</a></li>
-        <li><a href="/inquiry.html">Contact</a></li>
-      </ul>
+        <ul class="dropdown-links">
+          <li class="dropdown-mask">
+            <a href="/index.html" class="dropdown-link">Home</a>
+          </li>
+          <li class="dropdown-mask">
+            <a href="/services.html" class="dropdown-link">Services</a>
+          </li>
+          <li class="dropdown-mask">
+            <a href="/work.html" class="dropdown-link">Work</a>
+          </li>
+          <li class="dropdown-mask">
+            <a href="/inquiry.html" class="dropdown-link">Contact</a>
+          </li>
+        </ul>
+
 
       <div class="dropdown-email">
         <button class="navbar__email">
