--- a/inquiry.html
+++ b/inquiry.html
@@ -55,13 +55,21 @@
   </div>
 
   <div class="dropdown-content">
-  <button class="close-menu" id="closeMenu">×</button>
-  <ul class="dropdown-links">
-    <li><a href="/index.html">Home</a></li>
-    <li><a href="/services.html">Services</a></li>
-    <li><a href="/work.html">Work</a></li>
-    <li><a href="/inquiry.html">Contact</a></li>
-  </ul>
+      <button class="close-menu" id="closeMenu">×</button>
+        <ul class="dropdown-links">
+          <li class="dropdown-mask">
+            <a href="/index.html" class="dropdown-link">Home</a>
+          </li>
+          <li class="dropdown-mask">
+            <a href="/services.html" class="dropdown-link">Services</a>
+          </li>
+          <li class="dropdown-mask">
+            <a href="/work.html" class="dropdown-link">Work</a>
+          </li>
+          <li class="dropdown-mask">
+            <a href="/inquiry.html" class="dropdown-link">Contact</a>
+          </li>
+        </ul>
 
 
   
@@ -221,7 +229,7 @@
     <!-- reCAPTCHA appears here -->
     <div data-netlify-recaptcha="true" style="margin-top: 2rem;"></div>
 
-    <button type="submit" class="navbar__inquiry2">
+    <button type="submit" class="navbar__inquiry">
       Send Inquiry
       <span class="inquiry-arrow">
         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
@@ -344,6 +352,24 @@ textarea.user-touched:invalid {
 textarea.user-touched:invalid:focus {
   animation: shake 0.2s ease-in-out 2;
 }
+
+/* Force dropdown list spacing to match other pages */
+#navDropdown .dropdown-links{
+  margin: 2rem 0 0;
+  padding: 0;
+  list-style: none;
+}
+
+#navDropdown .dropdown-mask{
+  margin: 0.2rem 0;      /* control spacing here */
+  padding: 0;            /* kill any inherited padding */
+  line-height: 1;        /* normalize */
+  overflow: hidden;
+}
+
+#navDropdown .dropdown-link{
+  line-height: 1;        /* normalize */
+}
 </style>
 <script>
   // Auto expand textarea
@@ -402,18 +428,7 @@ textarea.user-touched:invalid:focus {
 </script>
     <script>
 
-//NAVIGATION SCREEN
-const contactBtn = document.querySelector('.navbar__contact');
-const dropdownMenu = document.getElementById('navDropdown');
-const closeMenu = document.getElementById('closeMenu');
 
-contactBtn.addEventListener('click', () => {
-  dropdownMenu.classList.add('open');
-});
-
-closeMenu.addEventListener('click', () => {
-  dropdownMenu.classList.remove('open');
-});
 
 //SOCIAL CONTAINER BUTTONS FADE ON SCROLL
 document.addEventListener("scroll", () => {
@@ -460,6 +475,11 @@ document.addEventListener("scroll", () => {
 
 .scroll-indicator {
   animation: scrollPulse 2s infinite;
+}
+@media (max-width: 768px) {
+  .scroll-indicator {
+    display: none;
+  }
 }
 </style>
 <script>
